- fix forgotten `eprintln!()`