@@ -1,6 +1,6 @@
 [package]
 name = "lilypond-midi-input"
-version = "0.9.2"
+version = "0.9.3"
 edition = "2021"
 
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
