@@ -347,7 +347,7 @@ I have written my own [Neovim plugin][nvim-midi] which uses this tool to allow i
 - [x] List all currently set (global) alterations
 - [x] List all options for a setting (avoids hardcoding them into editors)
 - [x] Simple screencast to show how this looks in action (under [features](#features))
-- [ ] Debug option/mode to see raw midi events
+- [x] Debug option/mode to see raw midi events
 - [x] Specify ottavation for alterations (i.e. `0=bis` will cause the note to always be one octave too high)
 
 [lilypond]: https://lilypond.org/
