@@ -1,1 +1,2 @@
 - fix forgotten `eprintln!()`
+- output raw midi data for debugging
